--- a/index.html
+++ b/index.html
@@ -1,2 +1,21 @@
-# viajeni.github.io
-hi hello 
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>My First live</title>
+    <Style media="screen">
+    .myDiv {
+        font-size: 30px;
+        text-align: center;
+        color: #D462FF;
+    }
+
+    </style>
+  </head>
+  <body>
+    <div class="myDiv">
+      Hello World!!
+    </div>
+
+  </body>
+</html>
