--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>My First live</title>
-    <Style media="screen">
+    <style media="screen">
     .myDiv {
         font-size: 30px;
         text-align: center;
