--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                                     </a>
                                     <ul class="dropdown-menu">
 
-                                        <li><a target="_blank" href="https://github.com/andersonguelphjs/andersonguelphjs.github.io">My Repo</a></li>
+                                        <li><a target="_blank" href="https://github.com/viajeni/viajeni.github.io">My Repo</a></li>
                                         <li><a target="_blank" href="presentations/index.html">Presentation Schedule</a></li>
                                         <li><a target="_blank" href="presentations/week1/index.html">Presentation Chooser</a></li>
                                         <li><a target="_blank" href="class/week2">Class Week 2</a></li>
