--- a/class/blog.html
+++ b/class/blog.html
@@ -43,16 +43,16 @@
 
     <div class="container">
       <div class="row">
-        <div class="col-md-3 height1 purple">
+        <div class="col-md-3 height1 randomColor">
 
         </div>
 
-        <div class="col-md-9 height1 blue">
+        <div class="col-md-9 height1 randomColor">
 
         </div></div>
 
         <div class="row">
-          <div class="col-md-12 height2 pink">
+          <div class="col-md-12 height2 randomColor">
 
           </div>
         </div>
@@ -61,9 +61,28 @@
 
     </div>
 
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script type="text/javascript">
+    $(document).ready(function() {
+      //get a random color between 0 and 255
+      function getRandomColor() {
+        return Math.floor(Math.random() * 255);
+      }
+
+      var randomColor = $(".randomColor");
+
+      $.each(randomColor, function(index, item) {
+        $(this).css("background-color", "RGB(" + getRandomColor() + "," + getRandomColor() + "," + getRandomColor() + ")");
+      })
+
+    })
   </body>
 </html>
