--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <img id="myBackgroundImage" src="hi.jpg">
+    <img id="myBackgroundImage" src="hello.png">
     <div class="site-wrapper">
 
         <div class="site-wrapper-inner">
