--- a/class/portfolio.html
+++ b/class/portfolio.html
@@ -36,36 +36,60 @@
   height: 100px;
 
 }
+
+.white {
+  background-color: white;
+}
+
+img {
+  max-height: 100px;
+  width: 100%;
+  margin: auto;
+
+}
 </style>
   </head>
   <body>
     <div class="container">
       <div class="row">
-        <div class="col-md-12 height1 randomColor">
+        <div class="col-md-12 height1 white">
+          <p class="text-primary">Our Portfolio page</p>
         </div></div>
 
         <div class="row">
-          <div class="col-md12 height2 randomColor">
+          <div class="col-md12 height2 white">
+            <p class="text-muted">Muted</p>
+            <p class="bg-primary">Primary</p>
+            <p class="bg-success">Success</p>
+            <p class="bg-info">Info</p>
+            <p class="bg-warning">Warning</p>
+            <p class="bg-danger">Danger</p>
+
 
           </div></div>
 
           <div class="row">
             <div class="col-md-3 height3 randomColor">
+              <img src="img/mccain.png" alt="Food Product">
 
             </div>
             <div class="col-md-3 height3 randomColor">
-
-            </div>
-
-            <div class="col-md-3 height3 randomColor">
+              <img src="img/burger.png" alt="Burger">
 
             </div>
 
             <div class="col-md-3 height3 randomColor">
+              <img src="img/sushi.png" alt="Sushi">
+
+            </div>
+
+            <div class="col-md-3 height3 randomColor">
+              <img src="img/Nuggets.png" alt="nuggets">
 
             </div></div>
             <div class="row">
               <div class="col-md-3 height5 randomColor">
+                <img src="img/coke.jpg" alt="Coke Bottle">
 
               </div>
               <div class="col-md-3 height5 randomColor">
