--- a/week3/upload.html
+++ b/week3/upload.html
@@ -179,10 +179,9 @@
       background-image: url();
       background-repeat: no-repeat;
       background-size: 100%;
-      height: 300px;
-
+      height: 200px;
       text-align: center;
-      line-height: 460px;
+      line-height: 200px;
     }
 
     h2 {
@@ -194,7 +193,6 @@
     ul {
       list-style-type: disc;
       color: #000;
-      margin-left: 50%;
       font-size: 24px;
     }
 
@@ -211,6 +209,7 @@
     .text {
       color: #000;
       font-size: 24px;
+      text-align: center;
     }
 
     img {
@@ -233,6 +232,10 @@
       colour: black;
       font-family: 'Raleway', sans-serif;
     }
+
+    .center {
+      margin-left: 50%;
+    }
   </style>
 </head>
 
@@ -247,6 +250,7 @@
       <div class="text"><strong>Minimalism</strong> is the art of creating a website that is simple, pleasing, easy on the eye, and free of clutter. It should look clean, professional, yet catches people's attention. It is highly structured and follows strict rules. Things
         that should be considered in a <strong>minimalist</strong> website:</div>
     </p>
+    <div class="center">
     <p>
       <ul>
         <li>
@@ -259,7 +263,7 @@
           Graphics
         </li>
       </ul>
-    </p>
+    </p></div>
     <p>
       <img src="colour.jpg" alt="Colours">
       <img src="fonts.jpg" alt="Different fonts.">
