--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                                         <li><a target="_blank" href="presentations/index.html">Presentation Schedule</a></li>
                                         <li><a target="_blank" href="presentations/week1/index.html">Presentation Chooser</a></li>
                                         <li><a target="_blank" href="presentations/week2/index.html">Presentation Week 2</a></li>
-                                        <li><a target="_blank" href="presentations/week3/index.html">Presentation Week 3</a></li>
+                                        <li><a href="presentations/week3/upload.html">Presentation Week 3</a></li>
                                         <li><a target="_blank" href="presentations/week4/types.html">Presentation Week 4</a></li>
                                         <li><a target="_blank" href="OReilly_JavaScript_The_Good_Parts_May_2008.pdf">JavaScript</a></li>
 
