--- a/presentations/week5/upload.html
+++ b/presentations/week5/upload.html
@@ -1,109 +1,41 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Presentation week 5</title>
 
-<head>
-  <meta charset="utf-8">
-  <title>Mind Mapping - Week 5</title>
-  <!-- CSS Starts -->
-  <style media="screen">
-    @import url('https://fonts.googleapis.com/css?family=Lora');
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.js"></script>
+      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <style media="screen">
     body {
-      background-color: #7CD1D5;
-      background-repeat: repeat;
-      font-family: 'Lora', sans-serif;
-      color: #164B4D;
-      font-size: 21px;
       text-align: center;
     }
-    h1 {
-      font-size: 70px;
-      text-decoration: bold;
-    }
-    h2,
-    h3,
-    h4,
-    h5 {
-      font-size: 30px;
-      text-decoration: underline;
-      text-align: left;
-      margin-left: 50px;
-      margin-top: 40px;
-    }
-    .mindMap {
-      text-align: center;
-      width: 80%;
-    }
-    .mainDiv {
-      width: 70%;
-      margin: 0 auto;
-      padding: 30px;
-    }
-  </style>
-  <!-- CSS Ends -->
-</head>
 
-<body>
-  <div class="mainDiv">
-    <h1>Mind Mapping</h1>
+      .mindMap {
+        width: 80%
+      }
+    </style>
+  </head>
+  <body>
+    <h1>Jeni's Mind Mapping</h1>
     <img src="mindmap.png" class="mindMap" alt="Mind Map">
-    <h2> Instructions</h2>
-    <p>
-      Create an account on the website <a href="https://coggle.it/">Coggle</a>
-      and create a mind map that you will later turn into a mockup for a website.
-      This website will be an online presentation of your own portfolio.
-    </p>
-    <p>
-      Make sure to include elements such as colours, different fonts, images,
-      and a theme that represents you and your portfolio.
-    </p>
-    <p>
-      Once the mindmap is created, go into Adobe Illustrator and create a mockup of your
-      portfolio website. Create it on an 8 x 11 landscape template.
-    </p>
-    <h3>When Finished</h3>
-    <p>
-      Download your mind map from Coggle by using the download button and then pressing image, PNG file.
-      You can then place in the upload.html that you can get
-      from <a href="https://github.com/maddiereil/maddiereil.github.io">Maddie's Repo</a>.
-      Place a screenshot of your mindmap from Coggle into the upload.html and add your name to the header
-      of the page.
-    </p>
-    <p>
-      After both are placed in upload.html save everything, commit and push to origin.
-    </p>
-    <h4>Rubric</h4>
-    <p>
-      Colours: (Do your colours match your overall theme?) 0/2
-    </p>
-    <p>
-      Font: (Do your font choices add to the colours and theme? If used more than one font,
-      do the different fonts compliment each other? Are the fonts legible?) 0/3
-    </p>
-    <p>
-      Theme: (Is there a clear overall theme?) 0/2
-    </p>
-    <p>
-      Mind Map: (Were the elements stated in the mindmap used in the mockup? Was the
-      mind map organized and easy to read? Did the mind map demonstrate brainstorming for the mockup?) 0/5
-    </p>
-    <p>
-      Does the mockup represent a portfolio? 0/2
-    </p>
-    <p>
-      Total: 0/15
-    </p>
 
-    <h5>REMINDER</h5>
-    <p>
-      Remember that when you upload your images to upload.html that you type in the
-      image name correctly and that the image is in the same folder as the upload.html.
-    </p>
-    <p>
-      Also remember to put your "upload.html" as the link in your main page's index.html
-      under Presentation - Week 5 so we can properly grade your work.
-    </p>
-  </div>
+    <h2>Mockup</h2>
+    <img src="mockup.png" class="mindMap" alt="Mockup">
 
-</body>
-
+    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  </body>
 </html>
