--- a/presentations/week2/upload.html
+++ b/presentations/week2/upload.html
@@ -1,14 +1,18 @@
-.<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Presentation Assignment week 2</title>
+    <title>Golden Ratio</title>
     <style media="screen">
-
-
+      img{max-width: 100%;}
+      h1{
+        font-size: 50px;
+        text-align: center;
+      }
     </style>
   </head>
   <body>
-
+    <h1>Jeni's Golden Ratio</h1>
+    <img src="tranthungan_goldenratio.png" alt="golden ratio website design" class="mainDiv">
   </body>
 </html>
