--- a/presentations/week2/upload.html
+++ b/presentations/week2/upload.html
@@ -13,6 +13,6 @@
   </head>
   <body>
     <h1>Jeni's Golden Ratio</h1>
-    <img src="week2/goldenratio.png" alt="golden ratio website design" class="mainDiv">
+    <img src="img/goldenratio.png" alt="golden ratio website design" class="mainDiv">
   </body>
 </html>
