--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                                         <li><a target="_blank" href="presentations/week3/index.html">Presentation Week 3</a></li>
                                         <li><a target="_blank" href="week3/portfolio.html">Class Work Week 3</a></li>
                                         <li><a target="_blank" href="presentations/week4/index.html">Presentation Week 4</a></li>
+                                        <li><a target="_blank" href="week4/fourrows.html">Class Work Week 4</a></li>
                                         <li><a target="_blank" href="presentations/week5/index.html">Presentation Week 5</a></li>
                                         <li><a target="_blank" href="OReilly_JavaScript_The_Good_Parts_May_2008.pdf">JavaScript</a></li>
 
