--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                                         <li><a target="_blank" href="presentations/week5/index.html">Presentation Week 5</a></li>
                                         <li><a target="_blank" href="week5/verticalflex.html">Class Work Week 5</a></li>
                                         <li><a target="_blank" href="presentations/week6/index.html">Presentation Week 6</a></li>
+                                        <li><a target="_blank" href="week6/rankings.html">Class Work Week 6</a></li>
                                         <li><a target="_blank" href="OReilly_JavaScript_The_Good_Parts_May_2008.pdf">JavaScript</a></li>
 
                                     </ul>
