--- a/week6/rankings.html
+++ b/week6/rankings.html
@@ -1,62 +1,206 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Rankings</title>
 
-    <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>table</title>
 
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
+  <!-- Bootstrap -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.2/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+  <style media="screen">
+    @import url('https://fonts.googleapis.com/css?family=News+Cycle');
 
-  </head>
-  <body>
-<h1>Ranking Top Anime</h1>
-<div class="container">
-  <div class="row">
-    <div class="col-md-12">
+    .height1 {
+      height: 50px;
+    }
 
-  <tr>
-<td>1</td>
-<td>One Punchman 2</td>
-</tr>
-</div></div>
+    .height2 {
+      height: 400px;
+    }
 
-<div class="row">
-<div class="col-md-12">
-<tr>
-<td>2</td>
-<td>Shingeki no Kyojin Season 3</td>
-</tr>
+    .height3 {
+      height: 150px;
+    }
 
-</div></div>
+    .relativeParent {
+      position: relative;
+    }
 
-<div class="row">
-  <div class="col-md-12">
-    <tr>
-      <td>3</td>
-      <td>
-        Stein's gate 0
-      </td>
-    </tr>
-    
+    .absoluteChild {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+    }
+
+    .flex {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+
+    .flexSpaceBetween {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    .flexSpaceAround {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+    }
+    ul{
+            padding-bottom: 10px;
+    }
+    ul li{
+      list-style: none;
+      text-transform: uppercase;
+      font-family: 'News Cycle', sans-serif;
+      font-size: 25px;
+
+    }
+    ul li a,ul li a:hover{
+      text-decoration: none;
+
+
+    }
+    .header{
+      line-height: 75px;
+    }
+    .background{
+      background-image: url(gplaypattern.png);
+    }
+    h1{
+      font-family: 'News Cycle', sans-serif;
+      font-size: 40px;
+    }
+    .small{
+      image
+    }
+  </style>
+</head>
+
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 height1 background flexSpaceAround">
+        <h1>2017 HOLLYWOOD RANKINGS</h1>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 height1 header background">
+        <ul class="flexSpaceAround">
+          <li> <a href="#">Home</a> </li>
+          <li> <a href="#">Music</a> </li>
+          <li> <a href="#">Movies</a> </li>
+          <li> <a href="#">Apps</a> </li>
+        </ul>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12 height2">
+        <table class="table table-striped table-hover">
+          <tr>
+            <th>Rank</th>
+            <th>Name</th>
+            <th>Trailer</th>
+          </tr>
+          <tr>
+            <td>10</td>
+            <td>'Phantom Thread'</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>9</td>
+            <td>'A Ghost Story'</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>'Detroit'n</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>'The Shape of Water'</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>'Lady Bird'</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>'The Post'</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>'Three Billboards Outside Ebbing, Missouri'</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>3</td>
+            <td>'Call Me By Your Name'</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>2</td>
+            <td>'Get Out'</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>1</td>
+            <td>'Dunkirk'</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 height3 background flexSpaceAround">
+        <img src="net.png" alt="netflix">
+      </div>
+      <div class="col-md-6 height3 background flexSpaceAround">
+        <img src="you.png" alt="youtube">
+      </div>
+    </div>
   </div>
 
-</div>
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+  <script type="text/javascript">
+    //when the document is loaded
+    $(document).ready(function() {
+      //this function gets a random color between 0 and 255
+      function getRandomColor() {
+        return Math.floor(Math.random() * 255);
+      }
+      //get all the elements (divs) with the class randomColor
+      var randomColor = $(".randomColor");
 
+      //loop through all elements
+      //for each element change the css backhround color to RGB + three random colours
+      $.each(randomColor, function(index, item) {
+        $(this).css("background-color", "RGB(" + getRandomColor() + "," + getRandomColor() + "," + getRandomColor() + ")");
+      })
 
+    })
+  </script>
+</body>
 
-    <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <!-- Include all compiled plugins (below), or include individual files as needed -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-  </body>
 </html>
