--- a/week6/rankings.html
+++ b/week6/rankings.html
@@ -95,16 +95,16 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12 height1 background flexSpaceAround">
-        <h1>2017 HOLLYWOOD RANKINGS</h1>
+        <h1>THE BEST ANIME OF 2017</h1>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12 height1 header background">
         <ul class="flexSpaceAround">
           <li> <a href="#">Home</a> </li>
-          <li> <a href="#">Music</a> </li>
-          <li> <a href="#">Movies</a> </li>
-          <li> <a href="#">Apps</a> </li>
+          <li> <a href="#">Anime List</a> </li>
+          <li> <a href="#">Manga</a> </li>
+          <li> <a href="#">Login</a> </li>
         </ul>
       </div>
     </div>
@@ -117,53 +117,53 @@
             <th>Trailer</th>
           </tr>
           <tr>
-            <td>10</td>
-            <td>'Phantom Thread'</td>
-            <td><a href="#">Click to Watch Trailer</a></td>
-          </tr>
-          <tr>
-            <td>9</td>
-            <td>'A Ghost Story'</td>
-            <td><a href="#">Click to Watch Trailer</a></td>
-          </tr>
-          <tr>
-            <td>8</td>
-            <td>'Detroit'n</td>
-            <td><a href="#">Click to Watch Trailer</a></td>
-          </tr>
-          <tr>
-            <td>7</td>
-            <td>'The Shape of Water'</td>
-            <td><a href="#">Click to Watch Trailer</a></td>
-          </tr>
-          <tr>
-            <td>6</td>
-            <td>'Lady Bird'</td>
-            <td><a href="#">Click to Watch Trailer</a></td>
-          </tr>
-          <tr>
-            <td>5</td>
-            <td>'The Post'</td>
-            <td><a href="#">Click to Watch Trailer</a></td>
-          </tr>
-          <tr>
-            <td>4</td>
-            <td>'Three Billboards Outside Ebbing, Missouri'</td>
-            <td><a href="#">Click to Watch Trailer</a></td>
-          </tr>
-          <tr>
-            <td>3</td>
-            <td>'Call Me By Your Name'</td>
+            <td>1</td>
+            <td>Land of the Lustrous</td>
             <td><a href="#">Click to Watch Trailer</a></td>
           </tr>
           <tr>
             <td>2</td>
-            <td>'Get Out'</td>
+            <td>Made in Abyss</td>
             <td><a href="#">Click to Watch Trailer</a></td>
           </tr>
           <tr>
-            <td>1</td>
-            <td>'Dunkirk'</td>
+            <td>3</td>
+            <td>Miss Kobayashi's Dragon Maid</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>4</td>
+            <td>Kemono Friends</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>5</td>
+            <td>The Dragon Dentist</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>6</td>
+            <td>Just Because!</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>7</td>
+            <td>Girls' Last Tour</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>8</td>
+            <td>THE IDOLM@STER: SideM</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>9</td>
+            <td>ACCA: 13-Territory Inspection Dept.</td>
+            <td><a href="#">Click to Watch Trailer</a></td>
+          </tr>
+          <tr>
+            <td>10</td>
+            <td>Recovery of an MMO Junkie</td>
             <td><a href="#">Click to Watch Trailer</a></td>
           </tr>
         </table>
