--- a/week6/rankings.html
+++ b/week6/rankings.html
@@ -171,10 +171,10 @@
     </div>
     <div class="row">
       <div class="col-md-6 height3 background flexSpaceAround">
-        <img src="net.png" alt="netflix">
+        <img src="img/anime1.jpg" alt="anime">
       </div>
       <div class="col-md-6 height3 background flexSpaceAround">
-        <img src="you.png" alt="youtube">
+        <img src="img/anime2.jpg" alt="anime">
       </div>
     </div>
   </div>
