--- a/week7/json.html
+++ b/week7/json.html
@@ -28,6 +28,30 @@
       .height3 {
         height: 500px;
       }
+
+      h1 {
+        text-align: center;
+        color: #f2c6aa;
+      }
+
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+      }
+
+      li {
+        display: inline-block;
+        margin-left: 200px;
+        margin-top: 15px;
+      }
+
+      li a {
+        display: inline-block;
+
+      }
+
+    
     </style>
   </head>
   <body>
@@ -35,12 +59,27 @@
     <div class="container">
       <div class="row">
 
-    <div class="col-md-12 height1 randomColor">
+    <div class="col-md-12 height1">
+      <h1>HAIR TYPES</h1>
 
     </div></div>
 
     <div class="row">
-      <div class="col-md-12 height2 randomColor">
+      <div class="col-md-12 height2">
+        <ul>
+          <li>
+            ABOUT
+          </li>
+          <li>
+            FAQ
+          </li>
+          <li>
+            WIGS
+          </li>
+          <li>
+            LOCATION
+          </li>
+        </ul>
 
       </div></div>
 
@@ -90,7 +129,7 @@
         "length": "long",
         "texture": "curly",
         "color": "ash brown",
-        "imgUrl": "http://andersonguelphjs.github.io/class/week7/img/cat8.jpg"
+        "imgUrl": "https://github.com/viajeni/viajeni.github.io/blob/master/week7/img/curly.jpg"
 
       },
 
@@ -99,7 +138,7 @@
         "length": "short",
         "texture": "frizzy",
         "color": "blonde",
-        "imgUrl": "http://andersonguelphjs.github.io/class/week7/img/cat8.jpg"
+        "imgUrl": "https://github.com/viajeni/viajeni.github.io/blob/master/week7/img/blonde.jpg"
 
       },
 
@@ -108,7 +147,7 @@
         "length": "mid-length",
         "texture": "straight",
         "color": "silver",
-        "imgUrl": "http://andersonguelphjs.github.io/class/week7/img/cat8.jpg"
+        "imgUrl": "https://github.com/viajeni/viajeni.github.io/blob/master/week7/img/silver.jpg"
 
       },
 
@@ -117,7 +156,7 @@
         "length": "short",
         "texture": "nappy",
         "color": "black",
-        "imgUrl": "http://andersonguelphjs.github.io/class/week7/img/cat8.jpg"
+        "imgUrl": "https://github.com/viajeni/viajeni.github.io/blob/master/week7/img/afro.jpg"
 
       },
 
@@ -126,7 +165,7 @@
         "length": "short",
         "texture": "straight",
         "color": "black",
-        "imgUrl": "http://andersonguelphjs.github.io/class/week7/img/cat8.jpg"
+        "imgUrl": "https://github.com/viajeni/viajeni.github.io/blob/master/week7/img/short.jpg"
 
       },
 
