--- a/week7/json.html
+++ b/week7/json.html
@@ -51,7 +51,7 @@
 
       }
 
-    
+
     </style>
   </head>
   <body>
@@ -147,7 +147,7 @@
         "length": "mid-length",
         "texture": "straight",
         "color": "silver",
-        "imgUrl": "https://github.com/viajeni/viajeni.github.io/blob/master/week7/img/silver.jpg"
+        "imgUrl": "http://i64.tinypic.com/2vxfy3q.jpg"
 
       },
 
