--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                                         <li><a target="_blank" href="week6/rankings.html">Class Work Week 6</a></li>
                                         <li><a target="_blank" href="week7/index.html">Class Work Week 7</a></li>
                                         <li><a target="_blank" href="week7/json.html">JSON Work Week 7</a></li>
+                                        <li><a target="_blank" href="presentations/week7/upload.html">Presentation Week 7</a></li>
                                         <li><a target="_blank" href="OReilly_JavaScript_The_Good_Parts_May_2008.pdf">JavaScript</a></li>
 
                                     </ul>
