--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
                                         <li><a target="_blank" href="week7/index.html">Class Work Week 7</a></li>
                                         <li><a target="_blank" href="week7/json.html">JSON Work Week 7</a></li>
                                         <li><a target="_blank" href="presentations/week7/upload.html">Presentation Week 7</a></li>
+                                        <li><a target="_blank" href="week8/json.html">JSON Work Week 8</a></li>
                                         <li><a target="_blank" href="OReilly_JavaScript_The_Good_Parts_May_2008.pdf">JavaScript</a></li>
 
                                     </ul>
