--- a/week8/json.html
+++ b/week8/json.html
@@ -32,10 +32,10 @@
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script>
-  
-  <script>
+
+
     //get the JSON
-    var url = "";
+    var url = "https://raw.githubusercontent.com/viajeni/viajeni.github.io/master/week8/json1.html";
 
     $.getJSON(url).done(function(data) {
       console.log("success! ");
