--- a/week8/json.html
+++ b/week8/json.html
@@ -35,7 +35,7 @@
 
 
     //get the JSON
-    var url = "https://github.com/viajeni/viajeni.github.io/blob/master/week8/json1.html";
+    var url = "https://raw.githubusercontent.com/viajeni/viajeni.github.io/master/week8/json1.html";
 
     $.getJSON(url).done(function(data) {
       console.log("success! ");
