--- a/presentations/week8/upload.html
+++ b/presentations/week8/upload.html
@@ -21,7 +21,7 @@
         text-align: center;
       }
 
-      img {
+      .container {
       align-content: center;
       }
     </style>
@@ -29,11 +29,15 @@
 
   </head>
   <body>
+    <div class="container">
+
+
     <h2>Jeni's logo</h2>
     <img src="GN.png" alt="Logo">
 
     <h2>Jeni's mockup</h2>
     <img src="mockup10.png" alt="Mockup">
+  </div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
