--- a/presentations/week9/upload.html
+++ b/presentations/week9/upload.html
@@ -25,9 +25,8 @@
         text-align: center;
       }
       img{
-        margin-left: auto;
-        margin-right: auto;
-        display: block;
+        height: 50%;
+        width: 50%;
       }
     </style>
 </head>
@@ -49,7 +48,7 @@
 </nav>
 
 <!-- Insert Appetizers PNG Mock up Here -->
-<img src="week9/img/diner.png" alt="Menu">
+<img src="diner.png" alt="Menu">
 
 <!-- Insert Soups and Salads PNG Mock up Here -->
 <img src=" " alt="">
