--- a/index.html
+++ b/index.html
@@ -124,6 +124,7 @@
                                         <li><a target="_blank" href="week8/json.html">JSON Work Week 8</a></li>
                                         <li><a target="_blank" href="presentations/week8/upload.html">Presentation Week 8</a></li>
                                         <li><a target="_blank" href="week9/weather.html">Class work week 9</a></li>
+                                        <li><a target="_blank" href="presentations/week9/upload.html">Presentation Week 9</a></li>
                                         <li><a target="_blank" href="OReilly_JavaScript_The_Good_Parts_May_2008.pdf">JavaScript</a></li>
 
                                     </ul>
