--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
                                         <li><a target="_blank" href="presentations/week8/upload.html">Presentation Week 8</a></li>
                                         <li><a target="_blank" href="week9/weather.html">Class work week 9</a></li>
                                         <li><a target="_blank" href="presentations/week9/upload.html">Presentation Week 9</a></li>
+                                        <li><a target="_blank" href="week10/weather.html">Class work week 10</a></li>
+                                        <li><a target="_blank" href="presentations/week10/lottery.html">Presentation Week 10</a></li>
                                         <li><a target="_blank" href="OReilly_JavaScript_The_Good_Parts_May_2008.pdf">JavaScript</a></li>
 
                                     </ul>
