--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
                                         <li><a target="_blank" href="presentations/week9/upload.html">Presentation Week 9</a></li>
                                         <li><a target="_blank" href="week10/lottery.html">Class work week 10</a></li>
                                         <li><a target="_blank" href="presentations/week10/upload.html">Presentation Week 10</a></li>
+                                          <li><a target="_blank" href="presentations/week11/upload.html">Presentation Week 11</a></li>
                                         <li><a target="_blank" href="OReilly_JavaScript_The_Good_Parts_May_2008.pdf">JavaScript</a></li>
 
                                     </ul>
